Fix type and update background paper image to stretch

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,7 +14,8 @@ body {
   background-color: var(--wheat-field);
   background-image: url('/images/paper-background.webp'), url('/images/flower-corner.png');
   background-position: top left, 30px 30px, right 30px center;
-  background-repeat: repeat, no-repeat;
+  background-repeat: no-repeat, no-repeat;
+  background-size: 100% 100%, auto;
   font-family: var(--handwriting-font), sans-serif;
 
   // Navigation
